# openEnv-negotiateEnv

./: .dockerignore  .gitignore  CLEANUP_DUPLICATES.md  COLAB_COMMANDS.md  DEPLOYMENT_STATUS.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  NOTEBOOK_CHECKLIST.md  OPENENV_REFERENCE.md  PUSH_INSTRUCTIONS.md  QUICK_START.md  README.md  README_HF_SPACES.md  SPACE_README.md  SUBMISSION.md  TRAINING_GUIDE.md  TRAINING_SCRIPT_EXPLAINED.md  UNSLOTH_TRAINING_GUIDE.md  accelerate_config.yaml  baseline_random.py  baseline_rule.py  colab_training.ipynb  colab_training_final.ipynb  colab_training_full.ipynb  colab_training_local.ipynb  colab_training_websocket.ipynb  demo.py  deploy_and_test.sh  deploy_fix.sh  deploy_to_hf_spaces.sh  design.md  evaluate.py  evaluate_local.py  force_restart_space.sh  plot_reward_curve.py  plot_strategy_distribution.py  push_to_github.sh  push_to_hf.sh  pyproject.toml  requirements.md  (+12 more)
negotiate_env/: README.md  __init__.py  dataset_loader.py  models.py  scenarios.py
negotiate_env/client/: __init__.py  negotiate_env_client.py
negotiate_env/server/: Dockerfile  __init__.py  app.py  app_fixed.py  difficulty.py  environment.py  opponent.py  requirements.txt
